# docs/swagger.json
@@ -12,19 +12,19 @@
         },
         "version": "1.0"
     },
-    "host": "https://auth.richardhere.dev/",
-    "basePath": "/",
+    "host": "localhost/",
+    "basePath": "api/v1/",
     "paths": {
-        "/auth/v1/i": {
+        "/i": {
             "get": {
-                "description": "Get login",
+                "description": "Get user details",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Info",
+                "summary": "Info endpoint",
                 "operationId": "info",
                 "responses": {
                     "200": {
@@ -33,22 +33,34 @@
                             "type": "string"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.Error"
                         }
                     }
                 }
             }
         },
-        "/auth/v1/login": {
+        "/login": {
             "post": {
                 "description": "Login to an account",
                 "consumes": [
@@ -60,16 +72,16 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Login",
+                "summary": "Login endpoint",
                 "operationId": "login-account",
                 "parameters": [
                     {
-                        "description": "Account info",
+                        "description": "username and password",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.LoginRequest"
+                            "$ref": "#/definitions/authService.LoginRequest"
                         }
                     }
                 ],
@@ -77,25 +89,37 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.LoginResponse"
+                            "$ref": "#/definitions/response.LoginSuccess"
                         }
                     },
-                    "403": {
-                        "description": "Forbidden",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "501": {
+                        "description": "Not Implemented",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
                         }
                     }
                 }
             }
         },
-        "/auth/v1/logout": {
+        "/logout": {
             "post": {
                 "description": "Logout from account",
                 "produces": [
@@ -104,7 +128,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Logout",
+                "summary": "Logout endpoint",
                 "operationId": "logout-account",
                 "responses": {
                     "200": {
@@ -113,22 +137,16 @@
                             "type": "string"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "type": "string"
                         }
                     }
                 }
             }
         },
-        "/auth/v1/reg": {
+        "/reg": {
             "post": {
                 "description": "Register a new user",
                 "consumes": [
@@ -140,16 +158,16 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Registration",
+                "summary": "Registration endpoint",
                 "operationId": "registration",
                 "parameters": [
                     {
-                        "description": "Account info",
+                        "description": "Register request",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.RegistrationRequest"
+                            "$ref": "#/definitions/authService.RegisterRequest"
                         }
                     }
                 ],
@@ -157,25 +175,43 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.RegistrationResponse"
+                            "$ref": "#/definitions/response.RegistrationSuccess"
+                        }
+                    },
+                    "303": {
+                        "description": "See Other",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.Error"
                         }
                     }
                 }
             }
         },
-        "/auth/v1/validate": {
+        "/validate": {
             "post": {
                 "description": "This route validates tokens and returns user info",
                 "produces": [
@@ -184,31 +220,37 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Validate",
+                "summary": "Validation endpoint",
                 "operationId": "validate",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.ValidateResponse"
+                            "$ref": "#/definitions/response.ValidateSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.Error"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.Error"
                         }
                     }
                 }
@@ -216,9 +258,12 @@
         }
     },
     "definitions": {
-        "request.LoginRequest": {
+        "authService.LoginRequest": {
             "type": "object",
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
@@ -227,9 +272,12 @@
                 }
             }
         },
-        "request.RegistrationRequest": {
+        "authService.RegisterRequest": {
             "type": "object",
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
@@ -238,7 +286,7 @@
                 }
             }
         },
-        "response.ErrorResponse": {
+        "response.Error": {
             "type": "object",
             "properties": {
                 "error": {
@@ -246,13 +294,13 @@
                 }
             }
         },
-        "response.LoginResponse": {
+        "response.LoginSuccess": {
             "type": "object",
             "properties": {
-                "accessToken": {
+                "email": {
                     "type": "string"
                 },
-                "refreshToken": {
+                "lastLogin": {
                     "type": "string"
                 },
                 "username": {
@@ -260,13 +308,10 @@
                 }
             }
         },
-        "response.RegistrationResponse": {
+        "response.RegistrationSuccess": {
             "type": "object",
             "properties": {
-                "accessToken": {
-                    "type": "string"
-                },
-                "refreshToken": {
+                "email": {
                     "type": "string"
                 },
                 "username": {
@@ -274,9 +319,12 @@
                 }
             }
         },
-        "response.ValidateResponse": {
+        "response.ValidateSuccess": {
             "type": "object",
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "username": {
                     "type": "string"
                 }
